--- a/flowers.ditamap
+++ b/flowers.ditamap
@@ -24,26 +24,23 @@
       <topicref href="topics/flowers/gerbera.dita"/>
     </topicref>
   </topicref>
+  <topicref href="topics/flowers/gerberasss.dita"/>
   <?oxy_comment_start author="Mary" timestamp="20120510T115308+0300" comment="We should review the list of glossary terms. I think there are many technical terms in the documentation that need to be addressed."?>
-  <topichead navtitle="Glossary" type="topic">
-    <?oxy_comment_end?>
-    <topicref navtitle="Genus" href="concepts/glossaryGenus.dita"
-      keys="flowers.genus" print="yes"/>
+  <topichead navtitle="Glossary" type="topic"><?oxy_comment_end?>
+    <topicref navtitle="Genus" href="concepts/glossaryGenus.dita" keys="flowers.genus" print="yes"/>
     <topicref navtitle="Pollination" href="concepts/glossaryPollination.dita"
       keys="flowers.pollination" print="yes"/>
-    <topicref navtitle="Sepal" href="concepts/glossarySepal.dita"
-      keys="flowers.sepal" print="yes"/>
-    <topicref navtitle="Rhizome" href="concepts/glossaryRhizome.dita"
-      keys="flowers.rhizome" print="yes"/>
-    <topicref navtitle="Bulb" href="concepts/glossaryBulb.dita"
-      keys="flowers.bulb" print="yes"/>
-    <topicref navtitle="Cultivar" href="concepts/glossaryCultivar.dita"
-      keys="flowers.cultivar" print="yes"/>
-    <topicref navtitle="Perennial" href="concepts/glossaryPerennial.dita"
-      keys="flowers.perennial" print="yes"/>
-    <topicref navtitle="Panicle" href="concepts/glossaryPanicle.dita"
-      keys="flowers.panicle" print="yes"/>
-    <topicref href="images/Chrysanthemums.jpg" format="jpg" keys="IMAGE"/> 
+    <topicref navtitle="Sepal" href="concepts/glossarySepal.dita" keys="flowers.sepal" print="yes"/>
+    <topicref navtitle="Rhizome" href="concepts/glossaryRhizome.dita" keys="flowers.rhizome"
+      print="yes"/>
+    <topicref navtitle="Bulb" href="concepts/glossaryBulb.dita" keys="flowers.bulb" print="yes"/>
+    <topicref navtitle="Cultivar" href="concepts/glossaryCultivar.dita" keys="flowers.cultivar"
+      print="yes"/>
+    <topicref navtitle="Perennial" href="concepts/glossaryPerennial.dita" keys="flowers.perennial"
+      print="yes"/>
+    <topicref navtitle="Panicle" href="concepts/glossaryPanicle.dita" keys="flowers.panicle"
+      print="yes"/>
+    <topicref href="images/Chrysanthemums.jpg" format="jpg" keys="IMAGE"/>
   </topichead>
   <topicref href="topics/copyright.dita"/>
 </map> 
