--- a/file.dita
+++ b/file.dita
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="topic_ejg_l3r_kfb">
-    <title></title>
+    <title>fdsfsdfsd</title>
     <body>
-        <p></p>
+        <p>fdsfdsfsd</p>
     </body>
 </topic>
