--- a/topics/care.dita
+++ b/topics/care.dita
@@ -3,6 +3,7 @@
 <topic id="care">
     <title>Care and Preparationsasd asd as d</title>
     <body>
+        <p>fdsfdsfdsfds</p>
         <p>When caring for your flower garden you want to feed your plants properly, control pests
             and weeds. Good soil is a must to successful gardening, landscaping, and healthy
             flowers. You have to
