Committing with Oxygen XML Web Author

--- a/topics/copyright.dita
+++ b/topics/copyright.dita
@@ -3,7 +3,8 @@
 <topic id="topic-1">
     <title>Copyright</title>
     <body>
-        <p>Most of the informations was taken from <xref href="http://www.wikipedia.com"
-                format="html" scope="external">Wikipedia</xref>, the free encyclopedia.</p>
+        <p>Most of the infrewfsdfdsfdsformations was taken from <xref
+                href="http://www.wikipedia.com" format="html" scope="external">Wikipedia</xref>, the
+            free encyclopedia.</p>
     </body>
 </topic>
