--- a/topics/index.dita
+++ b/topics/index.dita
@@ -6,7 +6,7 @@
     <p>The various climatic changes that occ*ur in cyclic pattern are termed as 'Seasons'. There are
       four general seasons occurring on Earthrewfsfsdccvczzzx- Spring, Summer, Autumn and
       Winter.</p>
-    <p>fdsfsdfdsfdsfdfsdfsdfsd                                                                                                                                                        </p>
+    <p>fdsfsfsdfdsfsdfdsfdsfdfsdfsdfsd </p>
     <p>Flowers and seasons are intimately bound to each other. When Most of the flowers are
       season-specific. However, some flowers are found throfdsfsdfdsughout the year, not
       particularly affected by changing seasons.</p>
