34sdf342sfe342sf

--- a/topics/index.dita
+++ b/topics/index.dita
@@ -7,8 +7,8 @@
       four general seasons occurring on Earthrewfsfsdccvczzzx- Spring, Summer, Autumn and
       Winter.</p>
     <p>fdsfsfsdfdsfsdfdsfdsfdfsdfsdfsd </p>
-    <p>Flowers and seasons are intimately bound to each other. When Most of the flowers are
-      season-specific. However, some flowers are found throfdsfsdfdsughout the year, not
+    <p>Flowers and seasonfdsfsdfsfsfsfss are intimately bound to each other. When Most of the
+      flowers are season-specific. However, some flowers are found throfdsfsdfdsughout the year, not
       particularly affected by changing seasons.</p>
   </body>
 </topic>
