--- a/file.dita
+++ b/file.dita
@@ -4,5 +4,6 @@
     <title>fdsfsdfsdewqeweqw</title>
     <body>
         <p>fdsfdsfsdewqeqwewqewqewqe</p>
+        <p>vxvxcs</p>
     </body>
 </topic>
