--- a/concepts/autumnFlowers.dita
+++ b/concepts/autumnFlowers.dita
@@ -9,10 +9,10 @@
         <p>Some of the flowers blooming in
                 autumn<indexterm>flowers<indexterm>autumn</indexterm></indexterm> are: Acashia,
             Allium, Alstromeria, Amaranthus, Anemone, Baby's Breath, Bittersweet, Carnation, China
-            berry, Chrysanthemum, Cockscomb, Cosmos, Echinops, Freesia, Gerbera Daisy, Gladiolus,
-            Hypericum, Iris, Juniper, Kangaroo paw, Kalancheo, Liatrus, Lily, Asiatic, Lily,
-            Gloriosa, Misty Blue, Orchid, Pepper berry, Protea, Queen Ann's Lace, Quince, Rover,
-            Roses, Rowen berry, Salvia, Solidago, Statice, Star of Bethlehem, Sunflower, Yarrow,
-            Zinnia.</p>
+            berry, Chrysanthemum, Cockscomb, Cosmos, Echinops, ddsadsFreesia, Gerbera Daisy,
+            Gladiolus, Hypericum, Iris, Juniper, Kangaroo paw, Kalancheo, Liatrus, Lily, Asiatic,
+            Lily, Gloriosa, Misty Blue, Orchid, Pepper berry, Protea, Queen Ann's Lace, Quince,
+            Rover, Roses, Rowen berry, Salvia, Solidago, Statice, Star of Bethlehem, Sunflower,
+            Yarrow, Zinnia.</p>
     </conbody>
 </concept>
