Committing with Oxygen XML Web Author

--- a/Concept.dita
+++ b/Concept.dita
@@ -5,6 +5,6 @@
     <shortdesc></shortdesc>
     <conbody>
         <p>788979S</p>
-        <p></p>
+        <p>fdsfdsf</p>
     </conbody>
 </concept>
